fix mail issue and translate to Vietnamese

--- a/DotNetBackEnd/MailService/MailService/EmailTemplates/CancelOrder.html
+++ b/DotNetBackEnd/MailService/MailService/EmailTemplates/CancelOrder.html
@@ -1,19 +1,25 @@
 ﻿<div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Dear <b>{0}</b>,
+            Xin chào <b>{0}</b>,
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Your order has been: <b style="color: red">canceled</b>
+            Đơn hàng của bạn đã bị<b style="color: red">huỷ</b>
         </p>
     </div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            <i>Please do not reply to this automatically generated e-mail.</i>
+            <i>Xin vui lòng không trả lời mail tự động này.</i>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Nếu quý khách cần hỗ trợ, hãy liên hệ email: <b>quangtuong100@gmail.com</b>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Xin cám ơn.
         </p>
         <p>
-            Best regards,<br />
-            <b><i>VO QUANG TUONG</i></b>
+            Trân trọng,<br />
+            <b><i>VĂN PHÒNG PHẨM 2023</i></b>
         </p>
     </div>
 </div>
