--- a/DotNetBackEnd/MailService/MailService/EmailTemplates/ConfirmRegister.html
+++ b/DotNetBackEnd/MailService/MailService/EmailTemplates/ConfirmRegister.html
@@ -1,19 +1,30 @@
 ﻿<div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Dear <b>{0}</b>,
+            Xin chào <b>{0}</b>,
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Your confirm code is: <b style="color: red">{1}</b>
+            Chúng tôi nhận được yêu cầu đăng ký tài khoản của bạn trên <b>VĂN PHÒNG PHẨM 2023</b>.
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            <span>Hãy nhập mã xác nhận phía dưới để hoàn tất:</span>
+            <span>Mã xác nhận của bạn là: <b style="color: red">{1}</b></span>
         </p>
     </div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            <i>Please do not reply to this automatically generated e-mail.</i>
+            <i>Nếu không phải bạn yêu cầu, vui lòng bỏ qua tin nhắn này</i>
+            <i>Xin vui lòng không trả lời mail tự động này.</i>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Nếu quý khách cần hỗ trợ, hãy liên hệ email: <b>quangtuong100@gmail.com</b>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Xin cám ơn.
         </p>
         <p>
-            Best regards,<br />
-            <b><i>VO QUANG TUONG</i></b>
+            Trân trọng,<br />
+            <b><i>VĂN PHÒNG PHẨM 2023</i></b>
         </p>
     </div>
 </div>
