--- a/DotNetBackEnd/MailService/MailService/EmailTemplates/ConfirmChangePassword.html
+++ b/DotNetBackEnd/MailService/MailService/EmailTemplates/ConfirmChangePassword.html
@@ -1,13 +1,13 @@
 ﻿<div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Dear <b>{0}</b>,
+            Xin chào <b>{0}</b>,
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            We inform that you just <b>changed your password</b>
+            Bạn đã <b>thay đổi mật khẩu</b>thành công
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            If you didn't, Please contact us immediately !!
+            Nếu không phải bạn yêu cầu, hãy liên hệ với chúng tôi sớm nhất có thể.
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
             Hostline: 0339518617;
@@ -15,11 +15,17 @@
     </div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            <i>Please do not reply to this automatically generated e-mail.</i>
+            <i>Xin vui lòng không trả lời mail tự động này.</i>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Nếu quý khách cần hỗ trợ, hãy liên hệ email: <b>quangtuong100@gmail.com</b>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Xin cám ơn.
         </p>
         <p>
-            Best regards,<br />
-            <b><i>VO QUANG TUONG</i></b>
+            Trân trọng,<br />
+            <b><i>VĂN PHÒNG PHẨM 2023</i></b>
         </p>
     </div>
 </div>
