--- a/DotNetBackEnd/MailService/MailService/EmailTemplates/ConfirmOrder.html
+++ b/DotNetBackEnd/MailService/MailService/EmailTemplates/ConfirmOrder.html
@@ -1,19 +1,29 @@
 ﻿<div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Dear <b>{0}</b>,
+            Xin chào <b>{0}</b>,
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Your order has been: <b style="color: red">confirmed</b>
+            Chúng tôi thông báo đến bạn: đơn hàng đã được <b style="color: red">xác nhận</b>.
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Đơn hàng sẽ được bàn giao cho đơn vị vận chuyển và giao đến bạn sớm.
         </p>
     </div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            <i>Please do not reply to this automatically generated e-mail.</i>
+            <i>Nếu không phải bạn yêu cầu, vui lòng bỏ qua tin nhắn này</i>
+            <i>Xin vui lòng không trả lời mail tự động này.</i>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Nếu quý khách cần hỗ trợ, hãy liên hệ email: <b>quangtuong100@gmail.com</b>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Xin cám ơn.
         </p>
         <p>
-            Best regards,<br />
-            <b><i>VO QUANG TUONG</i></b>
+            Trân trọng,<br />
+            <b><i>VĂN PHÒNG PHẨM 2023</i></b>
         </p>
     </div>
 </div>
