--- a/DotNetBackEnd/MailService/MailService/EmailTemplates/CreateOrder.html
+++ b/DotNetBackEnd/MailService/MailService/EmailTemplates/CreateOrder.html
@@ -1,22 +1,28 @@
 ﻿<div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Dear <b>{0}</b>,
+            Xin chào <b>{0}</b>,
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Your customer whose name is {1} has been: <b style="color: red">create new order.</b> 
+            Khách hàng {1} đã <b style="color: red">tạo đơn hàng mới.</b>
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Please access to website to confirm it!
+            Vui lòng truy cập vào mục quản lý đơn hàng để xác nhận đơn hàng
         </p>
     </div>
     <div>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            <i>Please do not reply to this automatically generated e-mail.</i>
+            <i>Xin vui lòng không trả lời mail tự động này.</i>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Nếu quý khách cần hỗ trợ, hãy liên hệ email: <b>quangtuong100@gmail.com</b>
+        </p>
+        <p style="color: black; font-size: 16px; font-weight: 500">
+            Xin cám ơn.
         </p>
         <p>
-            Best regards,<br />
-            <b><i>VO QUANG TUONG</i></b>
+            Trân trọng,<br />
+            <b><i>VĂN PHÒNG PHẨM 2023</i></b>
         </p>
     </div>
 </div>
