update send mail for admin and user when user create order

--- a/DotNetBackEnd/MailService/MailService/EmailTemplates/CreateOrderUser.html
+++ b/DotNetBackEnd/MailService/MailService/EmailTemplates/CreateOrderUser.html
@@ -4,10 +4,10 @@
             Xin chào <b>{0}</b>,
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Khách hàng {1} đã <b style="color: red">tạo đơn hàng mới.</b>
+            Chúng tôi <b style="color: red">đã nhận được thông tin đơn hàng của bạn.(#{1})</b>
         </p>
         <p style="color: black; font-size: 16px; font-weight: 500">
-            Vui lòng truy cập vào mục quản lý đơn hàng để xác nhận đơn hàng
+            Vui lòng truy cập vào mục <a href="http://localhost:4200/user/order"> "Đơn hàng" </a> để theo dõi đơn hàng
         </p>
     </div>
     <div>
